rolling/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: syndicationservices
  name: cop-demo-api
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: cop-demo-api
  template:
    metadata:
      labels:
        app: cop-demo-api
    spec:
      securityContext:
        runAsUser: 1000
      containers:
        - name: cop-demo-api
          image: 1234567890.dkr.ecr.us-east-1.amazonaws.com/syndication/k8-demo:rolling
          ports:
            - name: http
              containerPort: 3000
          readinessProbe: #
            httpGet:
              path: /demo/ready
              port: 3000
            initialDelaySeconds: 10 #
            periodSeconds: 10 #
          livenessProbe: #
            httpGet:
              path: /demo/healthy
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
