rolling/service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: syndicationservices
  name: cop-demo-api
spec:
  selector:
    app: cop-demo-api
  ports:
    - port: 3000
